--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -201,3 +201,13 @@ f4）使用互斥条件组件判断上一步【获取当前库存量】是否小
 ![2-70](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-26.png)
 
 ##### 图2-70 小于等于0时流转条件
+
+![2-71](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-27.png)
+
+##### 图2-71 输出结果组件【库存不足】
+
+![2-72](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-28.png)
+
+##### 图2-72 输出库存不足信息
+
+![2-73](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-29.png)
