--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -211,3 +211,11 @@ f4）使用互斥条件组件判断上一步【获取当前库存量】是否小
 ##### 图2-72 输出库存不足信息
 
 ![2-73](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-29.png)
+
+##### 图2-73 大于0时流转条件
+
+f5）使用Redis组件调用Redis方法putBucket(String name, Object value) 将当前库存量减1，并更新Redis缓存上存储的库存量，需传入通用对象名stock以及步骤3中Redis组件【获取当前库存量】的执行结果减1，如图2-74、图2-75所示：
+
+![2-74](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-30.png)
+
+##### 图2-74 Redis组件【更新库存量】
