--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -257,3 +257,13 @@ g4）编辑测试用例，如图2-80所示：
 ![2-80](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-36.png)
 
 ##### 图2-80 编辑测试用例
+
+g5）启用可视化日志（便于查看接口流程中的数据流转），单击执行即可，如图2-81所示：
+
+![2-81](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-37.png)
+
+##### 图2-81 启用可视化日志
+
+g6）通过测试用例详情页面的响应内容查看接口的执行结果，若当前库存充足时，返回调用成功以及当前库存数量，如图2-82所示；若当前库存不足，返回库存不足输出结果，如图2-83所示：
+
+![2-82](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-38.png)
