--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -267,3 +267,13 @@ g5）启用可视化日志（便于查看接口流程中的数据流转），单
 g6）通过测试用例详情页面的响应内容查看接口的执行结果，若当前库存充足时，返回调用成功以及当前库存数量，如图2-82所示；若当前库存不足，返回库存不足输出结果，如图2-83所示：
 
 ![2-82](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-38.png)
+
+##### 图2-82 库存充足的结果
+
+![2-83](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-39.png)
+
+##### 图2-83 库存不足的结果
+
+g7）若测试用例的结果出现错误，可通过可视化日志双击查看各个组件的节点数据进行接口的调试，如图2-84所示：
+
+![2-84](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-40.png)
