--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -277,3 +277,13 @@ g6）通过测试用例详情页面的响应内容查看接口的执行结果，
 g7）若测试用例的结果出现错误，可通过可视化日志双击查看各个组件的节点数据进行接口的调试，如图2-84所示：
 
 ![2-84](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-40.png)
+
+##### 图2-84 选择可视化日志
+
+![2-85](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-41.png)
+
+##### 图2-85 查看可视化日志
+
+![2-86](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-42.png)
+
+##### 图2-86 查看节点数据
