--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -287,3 +287,13 @@ g7）若测试用例的结果出现错误，可通过可视化日志双击查看
 ![2-86](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-42.png)
 
 ##### 图2-86 查看节点数据
+
+##### 2.2.3 全自动测试平台操作步骤
+
+##### 说明：在确保初始化库存接口和分布式锁接口都可以成功执行后，接下来我们使用全自动测试平台进行并发测试。
+
+a）前提条件
+
+使用全自动测试平台进行并发测试之前，您需要做好以下相关配置操作：
+
+a1）做好环境配置。
