--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -297,3 +297,13 @@ a）前提条件
 使用全自动测试平台进行并发测试之前，您需要做好以下相关配置操作：
 
 a1）做好环境配置。
+
+a2）根据实际情况部署所需资源池并新增对应的资源。
+
+b）关联全自动开发平台的项目和接口
+
+b1）单击全自动测试平台页面上方“测试场景 > 接口管理”选项，选择“关联项目”，如图2-87所示：
+
+![2-87](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-43.png)
+
+##### 图2-87 选择“关联项目”
