--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -307,3 +307,11 @@ b1）单击全自动测试平台页面上方“测试场景 > 接口管理”选
 ![2-87](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-43.png)
 
 ##### 图2-87 选择“关联项目”
+
+b2）查询所需关联项目，单击“关联”即可，如图2-88所示：
+
+##### 说明：本实例使用到的项目名称为test2，您在操作时需根据实际需求选择关联。
+
+![2-88](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-44.png)
+
+##### 图2-88 关联所需项目
