--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -315,3 +315,13 @@ b2）查询所需关联项目，单击“关联”即可，如图2-88所示：
 ![2-88](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-44.png)
 
 ##### 图2-88 关联所需项目
+
+b3）关联成功后，您可以看到对应项目及所有的接口信息显示在接口管理页面，如图2-89所示：
+
+![2-89](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-45.png)
+
+##### 图2-89 查看接口信息
+
+b4）进入初始化库存接口详情页面，选择好环境配置后，单击“测试”即可调用该接口执行初始化库存操作，如图2-90所示：
+
+##### 说明：对初始化库存接口进行测试后，最好单击一下保存，以免下次执行时需重新选择，您也可以在全自动测试平台对该接口执行测试用例以初始化库存。
