--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -325,3 +325,11 @@ b3）关联成功后，您可以看到对应项目及所有的接口信息显示
 b4）进入初始化库存接口详情页面，选择好环境配置后，单击“测试”即可调用该接口执行初始化库存操作，如图2-90所示：
 
 ##### 说明：对初始化库存接口进行测试后，最好单击一下保存，以免下次执行时需重新选择，您也可以在全自动测试平台对该接口执行测试用例以初始化库存。
+
+![2-90](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-46.png)
+
+##### 图2-90 选择好环境配置
+
+c）创建分布式锁测试用例
+
+c1）新增测试用例模块，如图2-91所示：
