--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -333,3 +333,11 @@ b4）进入初始化库存接口详情页面，选择好环境配置后，单击
 c）创建分布式锁测试用例
 
 c1）新增测试用例模块，如图2-91所示：
+
+![2-91](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-47.png)
+
+##### 图2-91 新增测试用例模块
+
+c2）在对应的测试用例模块下，新增测试用例，如图2-92所示：
+
+![2-92](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-48.png)
