--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -341,3 +341,14 @@ c1）新增测试用例模块，如图2-91所示：
 c2）在对应的测试用例模块下，新增测试用例，如图2-92所示：
 
 ![2-92](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-48.png)
+
+##### 图2-92 新增测试用例
+
+c3）填写测试用例详细信息，如图2-93所示：
+
+![2-93](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-49.png)
+
+##### 图2-93 填写测试用例信息
+
+c4）提交测试用例，如图2-94所示：
+
