--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -352,3 +352,12 @@ c3）填写测试用例详细信息，如图2-93所示：
 
 c4）提交测试用例，如图2-94所示：
 
+![2-94](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-50.png)
+
+##### 图2-94 提交测试用例
+
+c5）评审测试用例，如图2-95所示：
+
+![2-95](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-51.png)
+
+##### 图2-95 评审测试用例
