--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -361,3 +361,11 @@ c5）评审测试用例，如图2-95所示：
 ![2-95](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-51.png)
 
 ##### 图2-95 评审测试用例
+
+c6）评审通过后，单击“提交”即可，如图2-96所示：
+
+![2-96](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-52.png)
+
+##### 图2-96 通过评审
+
+d）新增分布式锁测试场景
