--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -369,3 +369,13 @@ c6）评审通过后，单击“提交”即可，如图2-96所示：
 ##### 图2-96 通过评审
 
 d）新增分布式锁测试场景
+
+d1）新增测试场景，填写基本信息，如图2-97所示：
+
+![2-97](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-53.png)
+
+##### 图2-97 新增测试场景
+
+![2-98](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-54.png)
+
+##### 图2-98 填写基本信息
