--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -379,3 +379,15 @@ d1）新增测试场景，填写基本信息，如图2-97所示：
 ![2-98](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-54.png)
 
 ##### 图2-98 填写基本信息
+
+d2）在根测试场景下创建场景组，如图2-98所示：
+
+![2-98](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-55.png)
+
+##### 图2-98 创建场景组
+
+d3）为场景组绑定接口，如图2-99所示：
+
+![2-99](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-56.png)
+
+##### 图2-99 绑定接口
