--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -391,3 +391,15 @@ d3）为场景组绑定接口，如图2-99所示：
 ![2-99](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-56.png)
 
 ##### 图2-99 绑定接口
+
+d4）选择“分布式锁”接口，如图2-100所示：
+
+![2-100](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-57.png)
+
+##### 图2-100 选择“分布式锁”接口
+
+d5）设置断言。
+
+##### 说明：断言用于设置条件对接口返回的数据进行检查，看是否可以通过设置的条件。断言因接口返回数据类型的不同也分为不同的类型，此处选择的是JSON断言，用于判断分布式锁接口返回的msg字段是否为“调用成功!”。若为“调用成功!”，则说明库存充足，用户请求成功，否则说明库存不足，用户请求失败。
+
+![2-101](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-58.png)
