--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -403,3 +403,15 @@ d5）设置断言。
 ##### 说明：断言用于设置条件对接口返回的数据进行检查，看是否可以通过设置的条件。断言因接口返回数据类型的不同也分为不同的类型，此处选择的是JSON断言，用于判断分布式锁接口返回的msg字段是否为“调用成功!”。若为“调用成功!”，则说明库存充足，用户请求成功，否则说明库存不足，用户请求失败。
 
 ![2-101](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-58.png)
+
+##### 图2-101 选择JSON断言
+
+![2-102](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-59.png)
+
+##### 图2-102 设置断言
+
+d6）单击“保存”，保存测试场景。
+
+##### 说明：您可以通过执行测试场景检验所设置场景组的是否符合预期效果，但需注意每执行一次，将消耗一次库存。
+
+e）进行并发性能测试
