--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -415,3 +415,11 @@ d6）单击“保存”，保存测试场景。
 ##### 说明：您可以通过执行测试场景检验所设置场景组的是否符合预期效果，但需注意每执行一次，将消耗一次库存。
 
 e）进行并发性能测试
+
+e1）进入性能测试页面，创建性能测试，如图2-103所示：
+
+![2-103](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-60.png)
+
+##### 图2-103 创建性能测试
+
+e2）填写性能测试基本信息，选择可用的环境和资源池，导入测试用例，如图2-104所示：
