--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -423,3 +423,13 @@ e1）进入性能测试页面，创建性能测试，如图2-103所示：
 ##### 图2-103 创建性能测试
 
 e2）填写性能测试基本信息，选择可用的环境和资源池，导入测试用例，如图2-104所示：
+
+![2-104](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-61.png)
+
+##### 图2-104 导入测试用例
+
+e3）选择创建的分布式锁测试用例，可以看到该测试用例绑定了分布式锁测试场景，如图2-105所示：
+
+![2-105](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-62.png)
+
+##### 图2-105 选择创建的用例
