--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -433,3 +433,13 @@ e3）选择创建的分布式锁测试用例，可以看到该测试用例绑定
 ![2-105](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-62.png)
 
 ##### 图2-105 选择创建的用例
+
+e4）设置并发用户数，并选择按持续时间或循环次数进行测试，如图2-106所示：
+
+##### 说明：因为本实例设置的初始化库存数量为10，此处我们设置12个并发用户数来展示分布式锁效果，同时设置这12个并发用户分别只执行一次分布式锁测试场景（即循环次数为1次），且这12个并发用户需要在1秒内全部生成（即在1秒内增加并发用户）。
+
+![2-106](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-63.png)
+
+##### 图2-106 设置参数
+
+e5）创建性能测试完成后，单击“保存”。
