--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -443,3 +443,13 @@ e4）设置并发用户数，并选择按持续时间或循环次数进行测试
 ##### 图2-106 设置参数
 
 e5）创建性能测试完成后，单击“保存”。
+
+e6）执行性能测试，如图2-107所示：
+
+![2-107](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-64.png)
+
+##### 图2-107 执行性能测试
+
+e7）稍等片刻后，查看测试报告。
+
+f）查看分布式锁性能测试报告
