--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -453,3 +453,13 @@ e6）执行性能测试，如图2-107所示：
 e7）稍等片刻后，查看测试报告。
 
 f）查看分布式锁性能测试报告
+
+f1）选择测试报告，如图2-108所示：
+
+![2-108](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-65.png)
+
+##### 图2-108 选择测试报告
+
+f2）单击“详情”，如图2-109所示：
+
+![2-109](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-66.png)
