--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -463,3 +463,11 @@ f1）选择测试报告，如图2-108所示：
 f2）单击“详情”，如图2-109所示：
 
 ![2-109](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-66.png)
+
+##### 图2-109 单击“详情”
+
+f3）查看测试报告详情，报告详情包含压力配置、测试概览、请求统计、错误记录以及监控详情5个部分的数据信息，我们可以在错误记录部分看到此次并发测试发送了12次请求，其中有两次请求因库存不足请求失败，如图2-110所示：
+
+![2-110](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-67.png)
+
+##### 图2-110 查看测试报告详情
