--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -1,1 +1,7 @@
-test
+### 2. 电商平台应用
+
+#### 2.3 新增商品秒杀活动
+
+如今互联网电商蓬勃发展，各类购物节活动层出不穷，秒杀活动也是我们经常会遇到的一种。本文将为您介绍如何利用全自动开发平台实现新增商品秒杀活动的功能。案例主要用到了全自动开发平台中的单函数组件、单SQL组件、互斥条件组件以及赋值组件等，通过绘制组件流程图并进行组件配置相当于编写复杂代码，同时通过流程图的可视化展示，我们可以清晰地看出功能实现的逻辑关系。对比敲代码，开发过程变得更加有趣便捷。
+
+##### 2.3.1 效果展示
