--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -11,3 +11,11 @@
 ![2-111](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/2_1.jpg)
 
 ##### 图2-111 前端页面
+
+![2-112](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/2_2.png)
+
+##### 图2-112 全自动开发平台参数录入界面
+
+![2-113](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/2_3.png)
+
+##### 图2-113 测试用例执行结果
