--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -19,3 +19,14 @@
 ![2-113](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/2_3.png)
 
 ##### 图2-113 测试用例执行结果
+
+![2-114](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/2_4.png)
+
+##### 图2-114 秒杀表新增记录
+
+##### 2.3.2 准备工作
+
+提前准备功能实现过程中需用到的两张数据表：秒杀表seckill_buy（用于存储商品秒杀活动信息），商品表goods_info（用于存储商品信息），表结构设计及相关数据如下所示：
+
+商品表goods_info：
+
