--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -30,3 +30,29 @@
 
 商品表goods_info：
 
+```
+ CREATE TABLE `goods_info` (
+  `goods_id` varchar(24) NOT NULL COMMENT '商品编号',
+  `goods_name` varchar(100) DEFAULT '' COMMENT '商品名称',
+  `goods_remark` varchar(300) DEFAULT '' COMMENT '商品简介',
+  `keyword` varchar(100) DEFAULT NULL COMMENT '商品关键字',
+  `provider_id` varchar(24) DEFAULT NULL COMMENT '供应商',
+  `goods_type_id` varchar(300) DEFAULT NULL COMMENT '商品类别 ',
+  `goods_status` int(11) DEFAULT NULL COMMENT '商品状态 1仓库中 2审核中 3出售中 4已删除',
+  `sort_id` int(11) DEFAULT NULL COMMENT '排序 默认0',
+  `goods_pic_url` varchar(200) DEFAULT '' COMMENT '封面图',
+  `recommend_pic_url` varchar(200) DEFAULT NULL COMMENT '推荐图',
+  `video_link` varchar(200) DEFAULT NULL COMMENT '主图视频',
+  `create_user` varchar(24) DEFAULT NULL COMMENT '创建人',
+  `create_time` datetime DEFAULT NULL COMMENT '创建时间',
+  `update_user` varchar(24) DEFAULT NULL COMMENT '更新人',
+  `update_time` datetime DEFAULT NULL COMMENT '更新时间',
+  `context_html_url` varchar(200) DEFAULT NULL COMMENT '商品内容HTML文件地址',
+  `sale_price` decimal(10,2) DEFAULT 0.00 COMMENT '售价',
+  `from_price` decimal(10,2) DEFAULT 0.00 COMMENT '原价',
+  `data_from` int(11) DEFAULT 1 COMMENT '数据来源1后台2供应商',
+  `remain_amount` int(11) DEFAULT NULL COMMENT '库存',
+  PRIMARY KEY (`goods_id`)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT='商品表';
+```
+
