--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -56,3 +56,11 @@
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT='商品表';
 ```
 
+![2-115](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/3_1.png)
+
+##### 图2-115 商品表参数1
+
+![2-116](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/3_2.png)
+
+##### 图2-116 商品表参数2
+
