--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -64,3 +64,10 @@
 
 ##### 图2-116 商品表参数2
 
+![2-117](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/3_3.png)
+
+##### 图2-117 商品表参数3
+
+##### 说明：商品表中的配置信息可自行设置。
+
+秒杀表seckill_buy：
