--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -71,3 +71,23 @@
 ##### 说明：商品表中的配置信息可自行设置。
 
 秒杀表seckill_buy：
+
+```
+CREATE TABLE `seckill_buy` (
+  `seckill_buy_id` varchar(24) NOT NULL DEFAULT '' COMMENT '秒杀编号',
+  `seckill_buy_name` varchar(200) DEFAULT '' COMMENT '秒杀名称',
+  `goods_id` varchar(24) NOT NULL COMMENT '商品编号',
+  `seckill_buy_remark` varchar(300) DEFAULT '' COMMENT '秒杀简介',
+  `start_time` datetime DEFAULT NULL COMMENT '秒杀开始时间',
+  `end_time` datetime DEFAULT NULL COMMENT '秒杀结束时间',
+  `seckill_buy_status` int(2) DEFAULT 1 COMMENT '秒杀状态 1待开启2开启中3已结束4已关闭',
+  `seckill_price` decimal(10,2) DEFAULT 0.00 COMMENT '秒杀价格',
+  `remain_amount` int(11) DEFAULT 0 COMMENT '剩余数量',
+  `limit_buy_amount` int(11) DEFAULT 0 COMMENT '限购数量',
+  `finish_reason` tinyint(2) DEFAULT 1 COMMENT '结束原因 1秒杀商品卖完2超时结束3自动关闭',
+  `create_time` datetime DEFAULT NULL COMMENT '创建时间',
+  `create_user` varchar(24) DEFAULT NULL COMMENT '创建人',
+   PRIMARY KEY (`seckill_buy_id`),
+   KEY `goods_id` (`goods_id`) USING BTREE
+) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT='秒杀表';
+```
