--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -91,3 +91,13 @@ CREATE TABLE `seckill_buy` (
    KEY `goods_id` (`goods_id`) USING BTREE
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT='秒杀表';
 ```
+
+![2-118](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/3_4.png)
+
+##### 图2-118 秒杀表参数3
+
+##### 说明：秒杀表数据在调用接口后自动生成。
+
+##### 2.3.3 流程图设计概览
+
+![2-119](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/4_1.png)
