--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -101,3 +101,15 @@ CREATE TABLE `seckill_buy` (
 ##### 2.3.3 流程图设计概览
 
 ![2-119](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/4_1.png)
+
+##### 图2-119 接口流程图（上）
+
+![2-120](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/4_2.png)
+
+##### 图2-120 接口流程图（下）
+
+逻辑描述：
+
+a）查询《商品表》：根据商品编号查询商品信息。
+
+b）判断商品信息是否为空：判断【查询《商品表》】查询的商品信息是否为空，若为空，则输出“该商品信息不存在”；若不为空，则进行下面流程。
