--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -113,3 +113,13 @@ CREATE TABLE `seckill_buy` (
 a）查询《商品表》：根据商品编号查询商品信息。
 
 b）判断商品信息是否为空：判断【查询《商品表》】查询的商品信息是否为空，若为空，则输出“该商品信息不存在”；若不为空，则进行下面流程。
+
+c）获取当前系统时间：调用自定义函数getCurrDateTime()，获取当前系统时间。
+
+d）判断秒杀开始时间是否小于当前时间：判断秒杀开始时间是否小于当前时间，若小于等于当前时间，则输出“活动开始日期必须大于当前时间”；若不为空，则进行下面流程。
+
+e）判断开始时间是否小于结束时间：判断开始时间是否小于结束时间，若小于等于结束时间，则输出“活动开始日期不能大于结束日期” ；若不为空，则进行下面流程。
+
+f）判断限购数量是否大于0：判断限购数量是否大于0，若小于等于0，则输出“限购数量必须大于0” ；若不为空，则进行下面流程。
+
+g）判断秒杀价格是否大于0：判断秒杀价格是否大于0，若小于等于0，则输出“秒杀价格必须大于0” ；若不为空，则进行下面流程。
