--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -137,3 +137,13 @@ a）创建实体模型- SeckillBuy
 进入全自动开发平台“实体模型”功能模块，创建一个实体模型SeckillBuy，用来赋值商品秒杀活动信息，操作过程及实体模型设计如图2-121、图2-122、图2-123、图2-124所示：
 
 ![2-121](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_1.png)
+
+##### 图2-121 实体模型功能模块
+
+![2-122](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_2.png)
+
+##### 图2-122 实体模型设置
+
+![2-123](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_3.png)
+
+##### 图2-123 实体模型设置1
