--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -147,3 +147,13 @@ a）创建实体模型- SeckillBuy
 ![2-123](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_3.png)
 
 ##### 图2-123 实体模型设置1
+
+![2-124](![实体模型字段描述](../../../../images/%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B%E8%AE%BE%E8%AE%A1%E5%8F%82%E6%95%B0%E5%90%AB%E4%B9%89.PNG))
+
+##### 图2-124 实体模型字段描述
+
+b）新增商品秒杀活动接口
+
+进入全自动开发平台“接口管理”功能模块，新增接口模块并新增一个接口，填写接口的基本信息，如图2-125、图2-126所示：
+
+![2-125](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_5.png)
