--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -157,3 +157,15 @@ b）新增商品秒杀活动接口
 进入全自动开发平台“接口管理”功能模块，新增接口模块并新增一个接口，填写接口的基本信息，如图2-125、图2-126所示：
 
 ![2-125](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_5.png)
+
+##### 图2-125 接口模型功能模块
+
+![2-126](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_6.png)
+
+##### 图2-126 填写接口基本信息
+
+c）配置接口的入口参数
+
+本实例需要配置接口参数，用于录入商品秒杀相关信息，如图2-127、图2-128所示：
+
+![2-127](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_7.png)
