--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -169,3 +169,10 @@ c）配置接口的入口参数
 本实例需要配置接口参数，用于录入商品秒杀相关信息，如图2-127、图2-128所示：
 
 ![2-127](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_7.png)
+
+##### 图2-127 配置body参数
+
+![2-128](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_8.png)
+
+##### 图2-128 配置头部参数
+
