--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -176,3 +176,12 @@ c）配置接口的入口参数
 
 ##### 图2-128 配置头部参数
 
+d）模型编辑
+
+通过拖拽左侧组件列表中所需的组件进行模型编辑（即流程图编辑），如图2-129，图2-130所示：
+
+![2-129](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_9.png)
+
+##### 图2-129 进入模型编辑
+
+![2-130](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_10.png)
