--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -185,3 +185,11 @@ d）模型编辑
 ##### 图2-129 进入模型编辑
 
 ![2-130](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_10.png)
+
+##### 图2-130 组件列表
+
+##### 2.3.5 组件的具体配置（按逻辑描述展示）
+
+a）单SQl组件【查询《商品表》】
+
+根据商品编号查询《商品表》，需传入接口参数，如图2-131、图2-132、图2-133所示：
