--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -193,3 +193,11 @@ d）模型编辑
 a）单SQl组件【查询《商品表》】
 
 根据商品编号查询《商品表》，需传入接口参数，如图2-131、图2-132、图2-133所示：
+
+![2-131](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_11.png)
+
+##### 图2-131 单SQl组件【查询《商品表》】
+
+![2-132](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_12.png)
+
+##### 图2-132 组件配置
