--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -201,3 +201,11 @@ a）单SQl组件【查询《商品表》】
 ![2-132](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_12.png)
 
 ##### 图2-132 组件配置
+
+![2-133](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_13.png)
+
+##### 图2-133 SQL内容
+
+b）互斥组件【判断商品信息是否为空】
+
+根据单SQL组件【查询《商品表》】的执行结果判断指定商品编号的商品信息是否为空，若为空，则输出“该商品信息不存在”信息，结束流程；若不为空，则进行下面流程，如图2-134、图2-135、图2-136、图2-137所示：
