--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -219,3 +219,15 @@ b）互斥组件【判断商品信息是否为空】
 ##### 图2-135 为空时流转条件
 
 ![2-136](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_16.png)
+
+##### 图2-136 输出商品不存在信息
+
+![2-137](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_17.png)
+
+##### 图2-137 不为空时流转条件
+
+c）单函数【获取当前时间】
+
+调用自定义函数getCurrDateTime()，获取当前系统时间，如图2-138、图2-139所示：
+
+![2-138](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_18.png)
