--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -231,3 +231,13 @@ c）单函数【获取当前时间】
 调用自定义函数getCurrDateTime()，获取当前系统时间，如图2-138、图2-139所示：
 
 ![2-138](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_18.png)
+
+##### 图2-138 单函数【获取当前时间】
+
+![2-139](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_19.png)
+
+##### 图2-139 组件配置
+
+d）互斥条件组件【判断秒杀开始时间是否小于当前时间】
+
+通过比较接口入参中的秒杀开始时间和单函数组件【获取当前系统时间】的执行结果，形成两条顺序流。若开始时间小于等于当前时间，则输出提示：“活动开始日期必须大于当前时间”，结束流程；若开始时间大于当前时间，则进入以下流程，如图2-141、图2-142所示：
