--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -250,3 +250,11 @@ d）互斥条件组件【判断秒杀开始时间是否小于当前时间】
 
 ##### 图2-142 小于等于时流转条件
 
+![2-143](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_22.png)
+
+##### 图2-143 输出提示信息
+
+![2-144](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_23.png)
+
+##### 图2-144 大于时流转条件
+
