--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -258,3 +258,11 @@ d）互斥条件组件【判断秒杀开始时间是否小于当前时间】
 
 ##### 图2-144 大于时流转条件
 
+e）互斥条件组件【判断开始时间是否小于结束时间】
+
+通过比较接口入参中的秒杀开始时间和秒杀结束时间，形成两条顺序流。若开始时间大于等于结束时间，则输出提示：“活动开始日期不能大于结束日期”，结束流程；若开始时间小于结束时间，则进入以下流程，如图2-145、图2-146、图2-147、图2-148所示：
+
+![2-145](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_24.png)
+
+##### 图2-145【判断开始时间是否小于结束时间】
+
