--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -266,3 +266,12 @@ e）互斥条件组件【判断开始时间是否小于结束时间】
 
 ##### 图2-145【判断开始时间是否小于结束时间】
 
+![2-146](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_25.png)
+
+##### 图2-146 大于等于时流转条件
+
+![2-147](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_26.png)
+
+##### 图2-147 输出提示信息
+
+![2-148](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_27.png)
