--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -275,3 +275,14 @@ e）互斥条件组件【判断开始时间是否小于结束时间】
 ##### 图2-147 输出提示信息
 
 ![2-148](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_27.png)
+
+##### 图2-148 小于时流转条件
+
+f）互斥条件组件【判断限购数量是否大于0】
+
+通过判断接口入参中的限购数量是否大于0，形成两条顺序流。若限购数量小于或者等于0，则输出提示：“限购数量必须大于0”，若限购数量大于0则进入其他流程，如图2-149所示：
+
+![2-149](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_28.png)
+
+##### 图2-149【判断限购数量是否大于0】流程
+
