--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -286,3 +286,10 @@ f）互斥条件组件【判断限购数量是否大于0】
 
 ##### 图2-149【判断限购数量是否大于0】流程
 
+![2-150](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_29.png)
+
+##### 图2-150 小于等于0时流转条件
+
+![2-151](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_30.png)
+
+##### 图2-151 输出提示信息
