--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -301,3 +301,11 @@ f）互斥条件组件【判断限购数量是否大于0】
 g）互斥条件组件【判断秒杀价格是否大于0】
 
 通过判断接口入参中的秒杀价格是否大于0，形成两条顺序流。若秒杀价格小于等于0，则输出提示：“秒杀价格必须大于0”，结束流程；若秒杀价格大于0，则进入以下流程，如图2-153、如图2-154、图2-155、图2-156所示：
+
+![2-153](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_32.png)
+
+##### 图2-153【判断秒杀价格是否大于0】流程
+
+![2-154](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_33.png)
+
+##### 图2-154 小于等于0时流转条件
