--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -309,3 +309,11 @@ g）互斥条件组件【判断秒杀价格是否大于0】
 ![2-154](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_33.png)
 
 ##### 图2-154 小于等于0时流转条件
+
+![2-155](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_34.png)
+
+##### 图2-155 输出提示信息
+
+![2-156](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_35.png)
+
+##### 图2-156 大于0时流转条件
