--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -317,3 +317,13 @@ g）互斥条件组件【判断秒杀价格是否大于0】
 ![2-156](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_35.png)
 
 ##### 图2-156 大于0时流转条件
+
+h）赋值组件【赋值秒杀表数据】
+
+为实体模型SeckillBuy赋值秒杀表所需要的数据参数，如图2-157、图2-158、图2-159所示：
+
+![2-157](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_36.png)
+
+##### 图2-157 赋值组件【赋值秒杀表数据】
+
+![2-158](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_37.png)
