--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -327,3 +327,11 @@ h）赋值组件【赋值秒杀表数据】
 ##### 图2-157 赋值组件【赋值秒杀表数据】
 
 ![2-158](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_37.png)
+
+##### 图2-158 数据模型选择SeckillBuy实体模型
+
+![2-159](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_38.png)
+
+##### 图2-159 数据模型选择SeckillBuy实体模型
+
+##### 说明：其中seckillBuyId（秒杀编号）通过调用函数getUuid()获取24位随机编号；seckillBuyStatus（秒杀状态）填写1，表示秒杀活动待开启；remainAmount（商品剩余数量）通过引用单SQL组件【查询《商品表》】的查询结果中的remainAmount对应的参数值获取；createTime（创建时间）通过调用函数getCurrDateTime()，获取当前系统时间；其余参数均引用对应的接口参数即可。
