--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -335,3 +335,13 @@ h）赋值组件【赋值秒杀表数据】
 ##### 图2-159 数据模型选择SeckillBuy实体模型
 
 ##### 说明：其中seckillBuyId（秒杀编号）通过调用函数getUuid()获取24位随机编号；seckillBuyStatus（秒杀状态）填写1，表示秒杀活动待开启；remainAmount（商品剩余数量）通过引用单SQL组件【查询《商品表》】的查询结果中的remainAmount对应的参数值获取；createTime（创建时间）通过调用函数getCurrDateTime()，获取当前系统时间；其余参数均引用对应的接口参数即可。
+
+i）单SQL组件【新增《秒杀表》】
+
+将赋值组件【赋值秒杀表数据】赋值的数据新增一条秒杀活动记录到数据库的《秒杀表》中，如图2-160、图2-161、图2-162所示：
+
+![2-160](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_39.png)
+
+##### 图2-160 单SQL组件【新增《秒杀表》】
+
+![2-161](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_40.png)
