--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -345,3 +345,13 @@ i）单SQL组件【新增《秒杀表》】
 ##### 图2-160 单SQL组件【新增《秒杀表》】
 
 ![2-161](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_40.png)
+
+##### 图2-161 组件配置
+
+![2-162](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_41.png)
+
+##### 图2-162 SQL内容
+
+j）输出组件
+
+用于输出单SQL组件【新增《秒杀表》】的执行结果，来判断是否新增秒杀活动记录成功，如图2-163、图2-164所示：
