--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -355,3 +355,15 @@ i）单SQL组件【新增《秒杀表》】
 j）输出组件
 
 用于输出单SQL组件【新增《秒杀表》】的执行结果，来判断是否新增秒杀活动记录成功，如图2-163、图2-164所示：
+
+![2-163](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_42.png)
+
+##### 图2-163 输出结果组件
+
+![2-164](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_43.png)
+
+##### 图2-164 输出执行结果
+
+k）保存流程图
+
+流程图设计完成后，保存并退出窗体视图，如图2-165所示：
