--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -367,3 +367,13 @@ j）输出组件
 k）保存流程图
 
 流程图设计完成后，保存并退出窗体视图，如图2-165所示：
+
+![2-165](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_44.png)
+
+##### 图2-165 保存并退出窗体视图
+
+l）提交并发布接口
+
+![2-166](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_45.png)
+
+##### 图2-166 提交并发布接口
