--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -377,3 +377,13 @@ l）提交并发布接口
 ![2-166](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_45.png)
 
 ##### 图2-166 提交并发布接口
+
+m）测试用例
+
+m1）对接口进行测试用例，检验接口实现的功能是否可以达到预期，如图2-167所示：
+
+![2-167](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_46.png)
+
+##### 图2-167 进行测试用例
+
+m2）编辑测试用例，如图2-168所示：
