--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -387,3 +387,13 @@ m1）对接口进行测试用例，检验接口实现的功能是否可以达到
 ##### 图2-167 进行测试用例
 
 m2）编辑测试用例，如图2-168所示：
+
+![2-168](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_47.png)
+
+##### 图2-168 编辑测试用例
+
+m3）输入需新增的秒杀活动信息，并启用可视化日志（便于查看接口流程中的数据流转），再单击执行即可，如图2-169、图2-170所示：
+
+![2-169](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_48.png)
+
+##### 图2-169 录入头部参数信息
