--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -397,3 +397,11 @@ m3）输入需新增的秒杀活动信息，并启用可视化日志（便于查
 ![2-169](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_48.png)
 
 ##### 图2-169 录入头部参数信息
+
+![2-170](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_49.png)
+
+##### 图2-170 录入body参数信息
+
+m4）查看测试用例响应内容，同时查看数据库中的秒杀表seckill_buy是否新增秒杀活动记录成功，如图2-171、图2-172所示：
+
+![2-171](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_50.png)
