--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -405,3 +405,13 @@ m3）输入需新增的秒杀活动信息，并启用可视化日志（便于查
 m4）查看测试用例响应内容，同时查看数据库中的秒杀表seckill_buy是否新增秒杀活动记录成功，如图2-171、图2-172所示：
 
 ![2-171](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_50.png)
+
+##### 图2-171 查看执行结果
+
+![2-172](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_51.png)
+
+##### 图2-172 查看秒杀表
+
+m5）若测试用例的结果出现错误，可通过可视化日志双击查看各个组件的节点数据进行接口的调试，如图2-173、图2-174、图2-175所示：
+
+![2-173](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_52.png)
