--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -415,3 +415,13 @@ m4）查看测试用例响应内容，同时查看数据库中的秒杀表seckil
 m5）若测试用例的结果出现错误，可通过可视化日志双击查看各个组件的节点数据进行接口的调试，如图2-173、图2-174、图2-175所示：
 
 ![2-173](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_52.png)
+
+##### 图2-173 单击可视化日志
+
+![2-174](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_53.png)
+
+##### 图2-174 查看可视化日志
+
+![2-175](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_54.png)
+
+##### 图2-175 查看节点数据
