--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
@@ -1,1 +1,7 @@
-test
+### 2. 电商平台应用
+
+#### 2.4 订单超时自动删除
+
+日常生活中，我们经常需要使用到电商平台，例如淘宝、京东、拼多多等。在这些交易场景下的订单一般会设置一个支付时间，若超过这个支付时间，该订单将自动取消并删除（或订单状态变为已过期）。
+
+在本节案例中，我们将使用全自动开发平台实现订单超时自动删除功能。相比于传统开发，利用全自动开发平台可视化开发功能，将功能的实现逻辑在流程图中展示，开发过程变得更加简洁。
