--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
@@ -5,3 +5,11 @@
 日常生活中，我们经常需要使用到电商平台，例如淘宝、京东、拼多多等。在这些交易场景下的订单一般会设置一个支付时间，若超过这个支付时间，该订单将自动取消并删除（或订单状态变为已过期）。
 
 在本节案例中，我们将使用全自动开发平台实现订单超时自动删除功能。相比于传统开发，利用全自动开发平台可视化开发功能，将功能的实现逻辑在流程图中展示，开发过程变得更加简洁。
+
+##### 2.4.1 效果展示
+
+在全自动开发平台中，执行“订单超时自动删除”定时任务，系统将弹出调用成功的详情页面。若data输出“0”，则说明没有需要删除的订单；若data输出1，则说明删除了1条超时订单；以此类推data输出3即说明删除了3条超时订单，如图2-176所示。此时数据库中的订单表有如下变化：未支付且超过规定支付时间的订单将会自动删除，如图2-177、2-178所示：
+
+![2-176](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/2-1.jpeg)
+
+##### 图2-176 定时任务调用详情页面
