--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
@@ -13,3 +13,11 @@
 ![2-176](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/2-1.jpeg)
 
 ##### 图2-176 定时任务调用详情页面
+
+![2-177](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/2-2.png)
+
+##### 图2-177 调用定时任务前订单表数据
+
+![2-178](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/2-3.png)
+
+##### 图2-178 调用定时任务后订单表数据
