--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
@@ -21,3 +21,11 @@
 ![2-178](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/2-3.png)
 
 ##### 图2-178 调用定时任务后订单表数据
+
+##### 说明：本案例仅针对后端程序开发，若与前端页面联调可实现如图2-179、图2-180所展示的效果，此处以淘宝平台为例：
+
+![2-179](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/2-4.png)
+
+##### 图2-179 执行前前端页面效果
+
+![2-180](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/2-5.png)
