--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
@@ -29,3 +29,11 @@
 ##### 图2-179 执行前前端页面效果
 
 ![2-180](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/2-5.png)
+
+##### 图2-180 执行后前端页面效果
+
+##### 2.4.2 准备工作
+
+提前准备一张数据表：订单表 order_info（用于存储订单信息），表结构设计及相关数据如图2-181所示：
+
+订单表 order_info：
