--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
@@ -37,3 +37,14 @@
 提前准备一张数据表：订单表 order_info（用于存储订单信息），表结构设计及相关数据如图2-181所示：
 
 订单表 order_info：
+
+```
+CREATE TABLE `order_info` (
+  `order_id` varchar(24) NOT NULL DEFAULT '' COMMENT '订单号',
+  `customer_id` varchar(9) DEFAULT NULL COMMENT '客户编号',
+  `pay_money` decimal(12,2) DEFAULT NULL COMMENT '支付金额',
+  `create_time` datetime DEFAULT NULL COMMENT '创建时间',   
+  `pay_status` int(11) DEFAULT NULL COMMENT '支付状态',   
+  PRIMARY KEY (`order_id`)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT='订单表';
+```
