--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
@@ -48,3 +48,11 @@ CREATE TABLE `order_info` (
   PRIMARY KEY (`order_id`)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT='订单表';
 ```
+##### 说明：订单表中的数据可以自行配置，其中pay_status（支付状态）为1时表示订单已支付，为0时表示订单未支付。
+
+![2-181](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/3-1.png)
+
+##### 图2-181 订单表数据
+
+##### 2.4.3 流程图设计概览
+
