--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
@@ -56,3 +56,12 @@ CREATE TABLE `order_info` (
 
 ##### 2.4.3 流程图设计概览
 
+![2-182](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/4-1.png)
+
+##### 图2-182 定时任务流程图
+
+逻辑描述：
+
+a）将“需删除的未支付且超过支付时间的订单数目”初始化设置为0；
+
+b）在<订单表>查询未支付订单信息；
