--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
@@ -77,3 +77,13 @@ e1）获取当前计数器索引值指向未支付订单的最后支付时间（
 e2）获取当前系统时间；
 
 e3）判断当前未支付订单是否支付超时，若支付超时，即当前未支付订单的最后支付时间小于等于当前系统时间，则进行支付超时流程；若支付未超时，即当前未支付订单的最后支付时间大于当前系统时间，继续遍历下一条数据；
+
+e4）支付超时流程：删除当前未支付订单；
+
+e5）支付超时流程：需删除的未支付且超过支付时间的订单数目加1，继续遍历下一条数据；
+
+f）遍历完成流程：输出需删除的未支付且超过支付时间的订单数目，结束流程。
+
+##### 2.4.3 全自动开发平台操作步骤：
+
+a）新增实体模型count
