--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
@@ -99,3 +99,15 @@ a）新增实体模型count
 ##### 图2-184 新增实体模型
 
 b）新增定时任务：订单超时自动删除
+
+b1）进入全自动开发平台“定时任务”功能模块，新增一个定时任务，填写定时任务的基本信息，并设置Cron表达式，如下图所示：
+
+说明：本案例设置该定时任务5分钟执行一次，所以Cron表达式中秒指定为0即可，如图2-184所示，分钟设置为“从0开始，每5分钟执行一次”，您可以预览最近10次的执行时间，如图2-185所示，您也可以根据实际需求设置Cron表达式。
+
+![2-185](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-3.png)
+
+##### 图2-185 定时任务模块
+
+![2-186](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-4.png)
+
+##### 图2-186 新增定时任务
