--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
@@ -111,3 +111,15 @@ b1）进入全自动开发平台“定时任务”功能模块，新增一个定
 ![2-186](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-4.png)
 
 ##### 图2-186 新增定时任务
+
+![2-187](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-5.png)
+
+##### 图2-187 设置Cron表达式1
+
+![2-188](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-6.png)
+
+##### 图2-188 设置Cron表达式2
+
+b2）因本案例不需要配置入口参数，直接单击“提交”，进入下一步模型编辑即可，如图2-189所示：
+
+![2-189](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-7.png)
