--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
@@ -123,3 +123,17 @@ b1）进入全自动开发平台“定时任务”功能模块，新增一个定
 b2）因本案例不需要配置入口参数，直接单击“提交”，进入下一步模型编辑即可，如图2-189所示：
 
 ![2-189](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-7.png)
+
+##### 图2-189 参数列表
+
+c）定时任务模型编辑
+
+通过拖拽左侧组件列表中所需的组件进行模型编辑，如图2-190、图2-191所示：
+
+![2-190](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-8.png)
+
+##### 图2-190 进入模型编辑
+
+![2-191](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-9.png)
+
+##### 图2-191 窗体视图
