--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
@@ -137,3 +137,15 @@ c）定时任务模型编辑
 ![2-191](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-9.png)
 
 ##### 图2-191 窗体视图
+
+d）组件的具体配置（按逻辑描述展示）
+
+d1）使用赋值组件将“需删除的未支付且超过支付时间的订单数目”初始化设置为0，如图2-192、图2-193、图2-194所示：
+
+![2-192](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-10.png)
+
+##### 图2-192 赋值组件【初始化“需删除的未支付且超过支付时间的订单数目”】
+
+![2-193](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-11.png)
+
+##### 图2-193 选择数据模型
