--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
@@ -149,3 +149,13 @@ d1）使用赋值组件将“需删除的未支付且超过支付时间的订单
 ![2-193](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-11.png)
 
 ##### 图2-193 选择数据模型
+
+![2-194](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-12.png)
+
+##### 图2-194 设置参数值
+
+d2）使用单SQL组件在<订单表>查询所有订单未支付的信息，具体SQL内容如下图所示：
+
+![2-195](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-13.png)
+
+##### 图2-195 单SQL组件【查询未支付订单】
