--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
@@ -189,3 +189,15 @@ d4）使用计数器组件和互斥条件组件遍历查询到的未支付订单
 ##### 图2-200 遍历查询到的未支付订单信息
 
 ![2-201](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-19.png)
+
+##### 图2-201 计数器组件【遍历未支付订单】配置
+
+![2-202](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-20.png)
+
+##### 图2-202 开始遍历流转条件
+
+![2-203](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-21.png)
+
+##### 图2-203 遍历完成流转条件
+
+e）开始遍历流程：
